# mandelbrot.wasm

./: .gitignore  README.md  Simple Explanation.md
wasm/: Cargo.toml  README.md
wasm/src/: color.rs  lib.rs
web/: README.md  bootstrap.js  index.html  index.js  package-lock.json  package.json  webpack.config.js
web/styles/: normalize.css  simple-grid.css  skeleton.css  style.css
